# log-tools-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: filters.rs  formatter.rs  formatters.rs  lib.rs  logger.rs  main.rs  record.rs  tests.rs
src/handlers/: file.rs  mod.rs  null.rs  stdout.rs
src/handlers/streams/: file.rs  mod.rs  net.rs  stdout.rs
tests/: simple.rs
