[package]
name = "log-tools"
version = "0.0.1"
authors = ["Cedric Dumay <cedric.dumay@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cdumay/log-tools-rs"
description = """
A library to extend the log library
"""

[dependencies]
log = "0.3.7"
rustc-serialize = "0.3.23"
time = "0.1.36"
lazy_static = "0.2"
